# QCM_generateur_latex

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main_latex.py  main_latex1.py  main_latex2.py  main_moche.py  pyproject.toml  questions.txt  reponses.txt  test.tex
.github/workflows/: checks.yaml
app/: main_latex.py
app/tests/: include_test.py
qcm_generator/: __init__.py  main.py  main_cli.py  main_gui.py  main_latex.py  questions.txt
qcm_generator/tests/: include_test.py  main_test.py
sujets/aux_files/: vide.txt
