[tool.poetry]
name = "qcm-generator"
version = "0.1.0"
description = "Python app to generate LaTeX multiple choice questions from text questions"
authors = ["toby-bro <toby.bro@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygments = "^2.18.0"
mypy = "^1.11.2"

[tool.poetry.dev-dependencies]
ruff = "^0.6.9"
black = "^24.8.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pre-commit = "^3.8.0"
types-pygments = "^2.18.0.20240506"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
exclude = [
    ".venv",
    "poetry.lock",
    "__pycache__",
    "pyproject.toml",
]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
unfixable = ["F841"]
ignore = ["E999", "UP015", "S311", "S101"]
task-tags = ["TODO"]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle - Error
    "W",   # pycodestyle - Warning
    "C90", # mccabe
    "I",   # isort
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PGH", # pygrep-hooks
    "PLC", # Pylint - Convention
    "PLE", # Pylint - Error
    "PLW", # Pylint - Warning
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
    "TD002", # flake8-missing-todo-author
    "TD004", # flake8-missing-todo-colon
    "TD005", # flake8-missing-todo-description
    "TD007", # flake8-missing-space-after-todo-colon
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Module imported but unused
    "F403", # 'from module import *' used; unable to detect undefined names
]
"**/tests/*" = [
    "INP001", # is part of an implicit namespace package, missing __init__.py
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pylint]
max-args = 4
max-branches = 5
max-statements = 5

[tool.ruff.lint.pycodestyle]
max-doc-length = 160
ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = false
strict_equality = true
show_error_codes = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
namespace_packages = true
pretty = true
files = "**/*.py"
exclude = [
    ".venv/",
    ".git/",
    "__pycache__/",
]
